--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@wordpress/scripts": "^24.2.0"
 	},
 	"dependencies": {
-		"@wordpress/block-editor": "^9.8.0"
+		"@wordpress/block-editor": "^9.8.0",
+		"@wordpress/components": "^21.1.0"
 	}
 }
